--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,21 @@
   		<artifactId>junit</artifactId>
   		<version>4.12</version>
   	</dependency>
+  	
+  	<dependency>
+   		<groupId>org.graphwalker</groupId>
+   		<artifactId>graphwalker-core</artifactId>
+   		<version>3.3.0</version>
+	</dependency>
+	
+	 <dependency>
+    	<groupId>net.java.quickcheck</groupId>
+    	<artifactId>quickcheck</artifactId>
+    	<version>0.6</version>
+    	<scope>test</scope>
+	</dependency>
   </dependencies>
+  
+ 
+
 </project>
