--- a/pom.xml
+++ b/pom.xml
@@ -21,4 +21,13 @@
   		<version>4.12</version>
   	</dependency>
   </dependencies>
+  
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-pmd-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </reporting>
 </project>
