--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,8 @@
     	<version>0.6</version>
     	<scope>test</scope>
 	</dependency>
+	
+	<dependency>
   		<groupId>org.mockito</groupId>
   		<artifactId>mockito-core</artifactId>
   		<version>1.9.0</version>
