--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,15 @@
 	</dependency>
   </dependencies>
   
+  <reporting>
+  	<plugins>
+  		<plugin>
+  			<groupId>org.codehaus.mojo</groupId>
+  			<artifactId>findbugs-maven-plugin</artifactId>
+  			<version>3.0.3</version>
+  		</plugin>
+  	</plugins>
+  </reporting>
  
 
 </project>
