--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,46 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+  
+  <build>
+        <pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.1</version>
+					<configuration>
+						<source>1.8</source>
+						<target>1.8</target>
+						<testSource>1.8</testSource>
+						<testTarget>1.8</testTarget>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.graphwalker</groupId>
+					<artifactId>graphwalker-maven-plugin</artifactId>
+					<version>3.3.0</version>
+					<!-- Bind goals to the default lifecycle -->
+					<executions>
+						<execution>
+							<id>generate-sources</id>
+							<phase>generate-sources</phase>
+							<goals>
+								<goal>generate-sources</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>cobertura-maven-plugin</artifactId>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+    </build>
 
   <dependencies>
+  
   	<dependency>
   		<groupId>junit</groupId>
   		<artifactId>junit</artifactId>
@@ -22,10 +60,20 @@
   	</dependency>
   	
   	<dependency>
-   		<groupId>org.graphwalker</groupId>
-   		<artifactId>graphwalker-core</artifactId>
-   		<version>3.3.0</version>
-	</dependency>
+        <groupId>org.graphwalker</groupId>
+        <artifactId>graphwalker-core</artifactId>
+        <version>3.3.0</version>
+    </dependency>
+    <dependency>
+        <groupId>org.graphwalker</groupId>
+        <artifactId>graphwalker-java</artifactId>
+        <version>3.3.0</version>
+    </dependency>
+    <dependency>
+        <groupId>org.graphwalker</groupId>
+        <artifactId>graphwalker-maven-plugin</artifactId>
+        <version>3.3.0</version>
+    </dependency>
 	
 	 <dependency>
     	<groupId>net.java.quickcheck</groupId>
@@ -40,6 +88,18 @@
   		<version>1.9.0</version>
   		<scope>test</scope>
   	</dependency>
+  	
+  	<dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>1.7.7</version>
+    </dependency>
+    
+    <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>1.1.2</version>
+    </dependency>
   	
   </dependencies>
   
