--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,13 @@
   		<scope>test</scope>
   	</dependency>
   	
+  	<dependency>
+		<groupId>fm.void.jetm</groupId>
+		<artifactId>jetm</artifactId>
+		<version>1.2.3</version>
+	</dependency>
+  	
+  	
   </dependencies>
   
   <reporting>
