--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,22 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-pmd-plugin</artifactId>
 			</plugin>
+			<plugin> 
+  			<groupId>org.pitest</groupId> 
+  			<artifactId>pitest-maven</artifactId> 
+  			<version>1.1.7</version> 
+  				<configuration> 
+  					<mutators>
+        				<mutator>ALL</mutator>
+    				</mutators>
+  					<targetClasses> 
+  						<param>es.udc.vvs.model.*</param> 
+  					</targetClasses> 
+  					<targetTests> 
+  						<param>es.udc.vvs.test.*</param> 
+  					</targetTests> 
+  				</configuration> 
+  		</plugin>
 		</plugins>
 	</reporting>
 
